test/LitTests/SemanticAnalysis/Names/UnknownValueName.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

int function() {
	// CHECK: .loci:6:9: error: use of undeclared identifier 'value'
	return value;
}

// CHECK: 1 error generated.
